[package]
name = "impala"
version = "0.3.0"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
edition = "2021"
description = "TUI for managing wifi"
readme = "Readme.md"
homepage = "https://github.com/pythops/impala"
repository = "https://github.com/pythops/impala"

[dependencies]
async-channel = "2"
crossterm = { version = "0.29", default-features = false, features = [
    "event-stream",
] }
ratatui = "0.29"
tui-input = "0.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9" }
clap = { version = "4", features = ["derive", "cargo"] }
terminal-light = "1"
anyhow = "1"
iwdrs = "0.1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
