[package]
name = "impala"
version = "0.4.1"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0"
edition = "2024"
description = "TUI for managing wifi"
readme = "Readme.md"
homepage = "https://github.com/pythops/impala"
repository = "https://github.com/pythops/impala"

[dependencies]
async-channel = "2"
crossterm = { version = "0.29", default-features = false, features = [
    "event-stream",
] }
ratatui = "0.29"
tui-input = { version = "0.14", features = [
    "crossterm",
], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9" }
clap = { version = "4", features = ["derive", "cargo"] }
anyhow = "1"
iwdrs = "0.2.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27"
libc = "0.2"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
